# knet-ci-test

./: .gitignore  Makefile.am  README.md  TESTFILE  autogen.sh  configure.ac  knet-ci-test.spec.in  main.c  test-helloworld.sh  testrun.sh
